Fix for overlaping ratings in mobile list view

--- a/static/less/mobile/mobile.less
+++ b/static/less/mobile/mobile.less
@@ -120,6 +120,7 @@
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
+            float: left;
         }
 
         span.rating {
@@ -151,6 +152,7 @@
 #movie_library {
     .inner {
         padding-left: 10px;
+        padding-right: 60px;
     }
 }
 
